# profinet-rt

./: CONTRIBUTING.md  Cargo.toml  FOLLOWUPS.md  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
captures/: .gitignore  README.md
crates/profinet-rt/: Cargo.toml
crates/profinet-rt/src/: capture.rs  data.rs  lib.rs
crates/profinet-rt/src/dcp/: block.rs  frame.rs  identify.rs  mod.rs
crates/profinet-rt/src/eth/: afpacket.rs  header.rs  mod.rs  transport.rs
crates/profinet-rt/tests/: capture_replay.rs  dcp_replay.rs
crates/profinet-rt/tests/fixtures/: README.md
docs/: bench-capture-protocol.md  bench-pnet-device.md  dcp-golden-frames.md
docs/superpowers/plans/: 2026-06-25-profinet-rt-data-codec.md  2026-06-25-profinet-rt-foundation.md  2026-06-27-profinet-rt-dcp.md  2026-06-28-profinet-rt-closeout-polish.md  2026-06-28-profinet-rt-dcp-hardening.md
docs/superpowers/specs/: 2026-06-25-profinet-rt-device-design.md
