[package]
name = "profinet-rt"
version = "0.0.0"
description = "PROFINET RT IO-Device stack in pure Rust (community, not affiliated with PI)"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["profinet", "industrial", "real-time", "ethernet", "plc"]
categories = ["network-programming", "embedded"]
readme = "../../README.md"

[dependencies]
libc = "0.2"
nix = { version = "0.27", default-features = false, features = ["net", "socket"] }
pcap-file = "2"
thiserror = "1"

[dev-dependencies]
